--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <h1>My Image Gallery</h1>
 
   <div class="gallery">
-    <img src="C:\Users\MUDIT JAIN\Videos\CodeAlpha\Task 1\Screenshot 2025-03-30 140740.png" alt="Image 1" class="gallery-item" />
-    <img src="C:\Users\MUDIT JAIN\Videos\CodeAlpha\Task 1\Screenshot 2025-04-04 171555.png" alt="Image 2" class="gallery-item" />
-    <img src="C:\Users\MUDIT JAIN\Videos\CodeAlpha\Task 1\Screenshot 2025-04-05 135443.png" alt="Image 3" class="gallery-item" />
+    <img src="https://github.com/muditkaze/gallerytask1/blob/main/Screenshot%202025-03-30%20140740.png" alt="Image 1" class="gallery-item" />
+    <img src="https://github.com/muditkaze/gallerytask1/blob/main/Screenshot%202025-04-04%20171555.png" alt="Image 2" class="gallery-item" />
   </div>
 
   <div class="lightbox" id="lightbox">
